src/test/ui/suggestions/fn-needing-specified-return-type-param.stderr
error[E0282]: type annotations needed for `fn() -> A`
  --> $DIR/fn-needing-specified-return-type-param.rs:3:13
   |
LL |     let _ = f;
   |             ^ cannot infer type for type parameter `A` declared on the function `f`
   |
help: consider giving this binding the explicit type `fn() -> A`, where the type parameter `A` is specified
   |
LL |     let _: fn() -> A = f;
   |          ^^^^^^^^^^^
help: consider specifying the type argument in the function call
   |
LL |     let _ = f::<A>;
   |              ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
